--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
+    "react-select": "^5.10.0",
     "sass": "^1.84.0",
     "styled-components": "^6.1.15"
   },
